# ffsubsync

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  publish-to-pypi.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  show_progress.py  subalign.py  subsync-gui.py  subsync-vlc.patch  subtimeshift.py  utils.py  versioneer.py
.github/: FUNDING.yml
docs/: conf.py  index.rst  requirements-docs.txt  requirements.txt
example/: bash-script.sh
ffsubs/: generic_subtitles.py  subsync.py  subtitle_parser.py
ffsubsync/: __init__.py  _version.py  aligners.py  constants.py  ffmpeg_utils.py  ffsubsync.py  ffsubsync_gui.py  file_utils.py  generic_subtitles.py  golden_section_search.py  sklearn_shim.py  speech_transformers.py  suboffset.py  subtitle_parser.py  subtitle_preprocessor.py  subtitle_transformers.py  version.py
gui/: Makefile  README.md  build-macos.sh  build-windows.sh  build.spec  entrypoint-windows.sh  ffsubsync-gui.py  macos.spec  package-macos.sh  requirements-gui.txt  requirements.txt
html/: index.html
scripts/: blacken.sh  bump-version.py  deploy.sh  write-version.py
subalign/: __init__.py  subalign.py
subsync/: __init__.py  aligners.py  constants.py  file_utils.py  generic_subtitles.py  sklearn_shim.py  speech_transformers.py  suboffset.py  subsync.py  subsync_gui.py  subtitle_parser.py  subtitle_parsers.py  subtitle_transformers.py  test_end_to_end.py  utils.py  (+1 more)
(+28 files in other folders)
