# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py install' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ffsubsync/_version.py
versionfile_build = ffsubsync/_version.py
tag_prefix =
parentdir_prefix = ffsubsync-

[metadata]
description_file = README.md

[flake8]
max-line-length = 100
exclude = .git,__pycache__,old,build,dist,docs,versioneer.py,ffsubsync/_version.py

[bdist_wheel]
universal = 1

[tool:pytest]
filterwarnings = ignore::DeprecationWarning

[mypy]
no_strict_optional = True
ignore_missing_imports = True

[mypy-ffsubsync._version]
ignore_errors = True
